--- a/README
+++ b/README
@@ -9,3 +9,12 @@ To release new version of debian package
 6. Build package: $ debuild -S -sa
 7. Push package to Launchpad: $ dput ppa:ramses-tech/ramses ../ramses_Y.Y_source.changes
 8. At Launchpad go to ramses PPA -> View package details -> Copy packages. Select new version of package. Destination PPA: This PPA.  Copy options: Copy existing binaries. And copy package to all supported series.
+
+
+To install:
+
+```
+sudo add-apt-repository ppa:ramses-tech/ramses
+sudo apt-get update
+sudo apt-get install ramses
+```
